--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -9,6 +9,7 @@
 
 // Components
 @import "components/header.scss";
+@import "components/footer.scss";
 @import "components/form.scss";
 @import "components/stats.scss";
 @import "components/loader.scss";
