--- a/src/assets/styles/components/footer.scss
+++ b/src/assets/styles/components/footer.scss
@@ -6,9 +6,10 @@ footer {
 	align-items: center;
 	font-size: 1.5rem;
 	img {
-		height: 25px;
+		height: 20px;
 	}
 	span {
+		margin-inline-start: 10px;
 		font-family: cursive;
 	}
 }
